language/tests/error/UndefinedFunction03.sl
toemintoinvoke(f) {
  f("hello");
}

toemintof1() {
  tulostappa("f1");
}

toemintof2() {
  tulostappa("f2");
}

toemintof3() {
  tulostappa("f3");
}

toemintof4() {
  tulostappa("f4");
}

toemintof5() {
  tulostappa("f5");
}

toeminto piä() {
  invoke(f1);
  invoke(f2);
  invoke(f3);
  invoke(f4);
  invoke(f5);
  invoke(foo);  
}  
